[gd_scene load_steps=15 format=2]

[ext_resource path="res://RESOURCES/GuiImages/CornerForge.png" type="Texture" id=1]
[ext_resource path="res://UI/Screens/PartForge/PartForge.gd" type="Script" id=2]
[ext_resource path="res://UI/SlottableInventory/SlottableInventory.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Screens/Screen.tscn" type="PackedScene" id=4]
[ext_resource path="res://RESOURCES/Font/BMYEONSUNG.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://RESOURCES/GuiImages/BoardSetSmall.png" type="Texture" id=6]
[ext_resource path="res://RESOURCES/GuiImages/Forge.png" type="Texture" id=7]
[ext_resource path="res://RESOURCES/GuiImages/StoneBoardBorder.png" type="Texture" id=8]
[ext_resource path="res://RESOURCES/GuiImages/DivisionLineVertical.png" type="Texture" id=9]
[ext_resource path="res://RESOURCES/GuiImages/ParchmentLarge.png" type="Texture" id=10]
[ext_resource path="res://UI/SlottableInventory/PartSelectionInventory/PartSelectionInventory.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 85
font_data = ExtResource( 5 )

[node name="PartForge" instance=ExtResource( 4 )]
script = ExtResource( 2 )

[node name="LeftMargin" parent="VBoxContainer/Upper/VBoxContainer/Name" index="0"]
texture = ExtResource( 1 )

[node name="Label" parent="VBoxContainer/Upper/VBoxContainer/Name/TextureRect" index="0"]
text = "Part Forge"

[node name="RightMargin" parent="VBoxContainer/Upper/VBoxContainer/Name" index="2"]
texture = ExtResource( 1 )

[node name="Image" type="NinePatchRect" parent="VBoxContainer/Screen/VBoxContainer" index="0"]
margin_right = 1080.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 500 )
texture = ExtResource( 8 )
patch_margin_left = 49
patch_margin_top = 58
patch_margin_right = 45
patch_margin_bottom = 57

[node name="ForgeImage" type="TextureRect" parent="VBoxContainer/Screen/VBoxContainer/Image" index="0"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -25.0
texture = ExtResource( 7 )
expand = true

[node name="PartCreation" type="HBoxContainer" parent="VBoxContainer/Screen/VBoxContainer/Image" index="1"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="PartSelectionInventory" parent="VBoxContainer/Screen/VBoxContainer/Image/PartCreation" index="0" instance=ExtResource( 11 )]
margin_right = 537.0
margin_bottom = 460.0

[node name="PartSelectionDimm" type="Panel" parent="VBoxContainer/Screen/VBoxContainer/Image/PartCreation/PartSelectionInventory" index="2"]
visible = false
modulate = Color( 1, 1, 1, 0.619608 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Screen/VBoxContainer/Image/PartCreation" index="1"]
margin_left = 541.0
margin_right = 556.0
margin_bottom = 460.0
rect_min_size = Vector2( 15, 0 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 1

[node name="PartInfoBackground" type="TextureRect" parent="VBoxContainer/Screen/VBoxContainer/Image/PartCreation" index="2"]
margin_left = 560.0
margin_right = 1040.0
margin_bottom = 460.0
rect_min_size = Vector2( 480, 0 )
size_flags_vertical = 3
texture = ExtResource( 10 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Screen/VBoxContainer/Image/PartCreation/PartInfoBackground" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="PartType" type="Label" parent="VBoxContainer/Screen/VBoxContainer/Image/PartCreation/PartInfoBackground/VBoxContainer" index="0"]
margin_right = 440.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 140 )
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 2
autowrap = true

[node name="PartMaterials" type="Label" parent="VBoxContainer/Screen/VBoxContainer/Image/PartCreation/PartInfoBackground/VBoxContainer" index="1"]
margin_top = 144.0
margin_right = 440.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
autowrap = true

[node name="PartDescription" type="Label" parent="VBoxContainer/Screen/VBoxContainer/Image/PartCreation/PartInfoBackground/VBoxContainer" index="2"]
margin_top = 284.0
margin_right = 440.0
margin_bottom = 420.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
autowrap = true

[node name="SlottableInventory" parent="VBoxContainer/Screen/VBoxContainer" index="1" instance=ExtResource( 3 )]
margin_top = 504.0
margin_bottom = 1168.0
save_path = "user://part_forge.tscn"

[node name="MaterialsDimm" type="Panel" parent="VBoxContainer/Screen/VBoxContainer/SlottableInventory" index="2"]
visible = false
modulate = Color( 1, 1, 1, 0.619608 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer/Screen/VBoxContainer" index="2"]
margin_top = 1172.0
margin_right = 1080.0
margin_bottom = 1392.0
rect_min_size = Vector2( 0, 220 )

[node name="ButtonLeft" type="TextureButton" parent="VBoxContainer/Screen/VBoxContainer/Buttons" index="0"]
margin_right = 538.0
margin_bottom = 220.0
size_flags_horizontal = 3
texture_normal = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/Screen/VBoxContainer/Buttons/ButtonLeft" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "New Part"
align = 1
valign = 1

[node name="ButtonRight" type="TextureButton" parent="VBoxContainer/Screen/VBoxContainer/Buttons" index="1"]
margin_left = 542.0
margin_right = 1080.0
margin_bottom = 220.0
size_flags_horizontal = 3
texture_normal = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/Screen/VBoxContainer/Buttons/ButtonRight" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="BottomOffset" parent="VBoxContainer/Screen/VBoxContainer" index="3"]
margin_top = 1396.0
margin_bottom = 1616.0

[connection signal="part_type_selected" from="VBoxContainer/Screen/VBoxContainer/Image/PartCreation/PartSelectionInventory" to="." method="_on_part_type_selected"]
[connection signal="inspector" from="VBoxContainer/Screen/VBoxContainer/SlottableInventory" to="." method="_on_inspector"]
[connection signal="pressed" from="VBoxContainer/Screen/VBoxContainer/Buttons/ButtonLeft" to="." method="_on_ButtonLeft_pressed"]
[connection signal="pressed" from="VBoxContainer/Screen/VBoxContainer/Buttons/ButtonRight" to="." method="_on_ButtonRight_pressed"]
